<resources>
    <string name="app_name">L2S</string>
    <string name="action_sign_out">Sign out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- OAuth Web client ID -->
    <string name="server_client_id">889136593059-sm0u52gckhufr2pv38iaoqogg3r6u390.apps.googleusercontent.com</string>

    <string name="title_activity_maps">Map</string>
    <string name="sharing_end_date">End of sharing</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friends">Friends</string>
    <string name="action_share">Share</string>
    <string name="action_view_profile">Profile</string>
    <string name="action_view_sharings">Sharings</string>
    <string name="accept_friend">Accept friend request</string>
    <string name="deny_friend">Deny friend request</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">All</string>
    <string name="action_cancel">Cancel</string>
    <string name="sharing_dialog_title">Share</string>
    <string name="calendar_permission_needed">Permission required to read calendar!</string>
    <string name="no_friend_selected">Select a friend!</string>
    <string name="required">Required</string>
    <string name="attachImageDescription">Attach image</string>
    <string name="post_textview_hint">Event description</string>
    <string name="gps_not_enabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="end_of_sharing_expired">Date is passed!</string>
    <string name="no_calendars_error">No calendars found!</string>
    <string name="search_friends">Search friends</string>
    <string name="action_send_request">Send request</string>
    <string name="person_not_found">Person not found!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="request_sent">Request sent!</string>
    <string name="relationship_exists">Relationship exists!</string>
    <string name="calendar_shared">Calendar successfully shared!</string>
    <string name="no_events">No shareable events found!</string>
    <string name="sharing_exists">Calendar already shared!</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="attachedImage">Attached image</string>
    <string name="img_attached">Image attached!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="confirm_title">Delete friends</string>
    <string name="confirm_post_title">Post</string>
    <string name="please_sign_in">Please sign in</string>
</resources>
