<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.spi.localize2socialize.view.MainActivity">
    <item
        android:id="@+id/menu_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh_icon" />

    <item
        android:id="@+id/action_view_profile"
        android:orderInCategory="1"
        android:title="@string/action_view_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_sharings"
        android:orderInCategory="2"
        android:title="@string/action_view_sharings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="3"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
</menu>
