<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.spi.localize2socialize.MainActivity">

    <TextView
        style="@style/DialogTitleStyle"
        android:text="@string/search_friends" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/auto_complete_search_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="2"
            android:layout_margin="10dp"
            android:inputType="text"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/action_search_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/action_cancel"
                android:textColor="@color/colorSharingDialogText" />

            <Button
                android:id="@+id/action_send_friend_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/action_send_request"
                android:textColor="@color/colorSharingDialogText" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>