<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_window"
    tools:context="com.example.spi.localize2socialize.view.MainActivity">

    <TextView
        style="@style/DialogTitleStyle"
        android:background="@drawable/dialog_title"
        android:text="@string/sharing_dialog_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.ProgressBar"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/calendarSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/EndOfSharingTIL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sharing_end_date"
            android:focusable="false"
            app:hintAnimationEnabled="false"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/EndOfSharingET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:cursorVisible="false"
                android:inputType="date"
                android:ems="10" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/action_share_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_cancel"
                android:background="@drawable/popup_button"
                style="?android:buttonBarButtonStyle"
                android:padding="10dp"
                android:textColor="@color/colorSharingDialogText"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <Button
                android:id="@+id/action_share_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/popup_button"
                style="?android:buttonBarButtonStyle"
                android:padding="10dp"
                android:textColor="@color/colorSharingDialogText"
                android:text="@string/action_share" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>