<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context="view.EventsTab">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:id="@+id/postCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp">

        <LinearLayout
            android:id="@+id/postLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/colorPostBackground"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/postEditText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/post_textview_hint"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/attachImage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:background="@null"
                android:contentDescription="@string/attachImageDescription"
                android:src="@drawable/ic_attach_img" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/eventDetailsCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventDetailOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:textColor="@color/colorSharingDialogText"
                android:background="@drawable/dialog_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/eventDetailLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/eventTitleTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:background="@drawable/rounded_corner"
                        android:ems="10"
                        android:padding="2dp" />

                    <TextView
                        android:id="@+id/eventDescriptionTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:background="@drawable/rounded_corner"
                        android:ems="10"
                        android:padding="2dp" />

                    <TextView
                        android:id="@+id/eventStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:background="@drawable/rounded_corner"
                        android:ems="10"
                        android:padding="2dp" />

                    <TextView
                        android:id="@+id/eventEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:background="@drawable/rounded_corner"
                        android:ems="10"
                        android:padding="2dp" />

                    <TextView
                        android:id="@+id/eventLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:background="@drawable/rounded_corner"
                        android:ems="10"
                        android:padding="2dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/eventImageIV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|fill_vertical"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/attachedImage"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
